--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,29 @@ body{
   display: inline-block;
   min-width: 1000px;
     position: fixed;
-    padding: 2em;
+    padding-top: 2em;
     left: 50%;
     top: 0%;
     transform: translateX(-50%);
+    margin-bottom: -20px;
 }
+
+.mainInfo{
+  height: 600px;
+  color:#343B41;
+  font-family: 'Josefin Slab', serif;
+font-weight: 400;
+  font-size: 18px;
+ position: fixed;
+ left: 0px;
+ right: 0px;
+ bottom: 0px;
+ top: 150px;
+ margin-top: -40px;
+    overflow-y:scroll; 
+    overflow-x:hidden;
+}
+
 .name{
 font-family: 'Josefin Slab', serif;
   font-weight: 700;
@@ -36,29 +54,10 @@ font-family: 'Josefin Slab', serif;
 font-weight: 400;
 font-size: 15px;
 }
-.mainText{
-border-radius: 15px;
-padding: 5px;
-margin-bottom: 10px;
-  
-}
 #navlist li a{
   color:#343B41;
 }
-.mainInfo{
-  height: 60%;
-  color:#343B41;
-  font-family: 'Josefin Slab', serif;
-font-weight: 400;
-  font-size: 18px;
-    position:absolute;
-    top: 20%;
-    left:0px;
-    right:0px;
-    bottom:0px;
-    overflow-y:scroll; 
-    overflow-x:hidden;
-}
+
 #start{
     position:absolute;
     left:0;
@@ -83,6 +82,7 @@ font-weight: 400;
     top:0;
   z-index: 3;
   display: none;
+  margin-top: 50px;
 }
 #portfolio{
     position: absolute;
@@ -94,7 +94,7 @@ font-weight: 400;
   overflow-y: hidden;
     width: 100%;
     height: 107%;
-    margin-top: -3%;
+
 }
   .portfolioNav{
     margin-left: 90%;
@@ -146,8 +146,8 @@ font-weight: 400;
     display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 50%;
-  width: 50%;
+  height: 300px;
+  width: 300px;
   border-radius: 5%;
 }
 .test{
