--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
     left: 50%;
     top: 0%;
     transform: translateX(-50%);
-    margin-bottom: -20px;
+    margin-bottom: -15px;
 }
 
 .mainInfo{
@@ -27,9 +27,10 @@ font-weight: 400;
  position: fixed;
  left: 0px;
  right: 0px;
- bottom: 0px;
+ bottom: 10px;
  top: 150px;
- margin-top: -40px;
+ margin-top: -30px;
+ margin-bottom: 100px;
     overflow-y:scroll; 
     overflow-x:hidden;
 }
@@ -64,7 +65,6 @@ font-size: 15px;
     top:0;
   z-index: 1;
   width: 100%;
-  top: 15%;
   font-family: 'Josefin Slab', serif;
   font-weight: 400;
   font-size: 18px;
@@ -93,7 +93,7 @@ font-size: 15px;
   overflow-x: hidden;
   overflow-y: hidden;
     width: 100%;
-    height: 107%;
+    height: 600px;
 
 }
   .portfolioNav{
@@ -195,17 +195,23 @@ font-size: 15px;
   margin-top: 3%;
 }
 .firstPic{
-  margin-left: 14px;
+  margin-left: 20px;
 }
 
 /*responsive stuff for portfolio page*/
 @media (max-width: 1000px){
+  .mainInfo{
+    height: 475px;
+  }
+  #start{
+    margin-top: -25px;
+  }
   #portfolio{
-    height:2000px;
+    height:1600px;
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: -200px;
-    margin-bottom: -700px;
+    margin-top: -175px;
+    margin-bottom: -300px;
   }
   .portfolio-item{
     margin-left: 25%;
@@ -226,4 +232,14 @@ font-size: 15px;
   .portfolioNav2{
     margin-left: 45%;
   }
+  #experience{
+    position:absolute;
+    left:0;
+    top:0;
+  z-index: 3;
+  display: none;
+  margin-top: 0px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
 }
