added padding to top of experience page, also implemented js to make it scroll to top when switching between pages

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,9 @@ font-size: 15px;
     margin-top: -175px;
     margin-bottom: -300px;
   }
+  #experience{
+    padding-top: 30px;
+  }
   .portfolio-item{
     margin-left: 25%;
   }
